# socket_study

./: .gitignore
socket/chap_01/scripts/: run.sh
socket/chap_01/server/: CMakeLists.txt
socket/chap_01_01/: CMakeLists.txt
socket/chap_01_01/client/: client.c
socket/chap_01_01/server/: server.c
socket/chap_01_02/: CMakeLists.txt  data.txt
socket/chap_01_02/scripts/: build.sh  run.sh
socket/chap_01_02/src/: low_open.c  low_read.c
socket/chap_02_01/: CMakeLists.txt
socket/chap_02_01/scripts/: run.sh
socket/chap_02_01/src/: client.c  server.c
socket/lib/: CMakeLists.txt  error_handling.c  error_handling.h
socket/lib/scripts/: build.sh
